# libkiss

./: .gitignore  CMakeLists.txt  config.pri  kiss.pro
include/: kiss-compat.h  kiss-graphics.h  kiss.h
src/: graphics_interface.c  graphics_interface.h  kiss.c  kiss.h  kiss_graphics.c  kiss_graphics.h  kiss_graphics_draw.c  kiss_graphics_draw.h  kiss_input.h
test/: CMakeLists.txt
test/camera/: CMakeLists.txt  camera.c
